Fix Z-index when mobile menu is open

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -112,7 +112,7 @@
       padding-top: 0;
       padding-bottom: 0;
       width: 375px;
-      z-index: 3;
+      z-index: 9;
 
       &::before {
         content: '';
